swi-prolog (5.8.2-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Chris Lamb <lamby@debian.org>  Tue, 05 Jan 2010 21:54:06 +0000

swi-prolog (5.8.0-1) unstable; urgency=low

  * New upstream release.
    - Local copy of strndup renamed to my_strndup. (Closes: #552847)
  * Replace libreadline5-dev dependencies with libreadline-dev.
  * Fix bad jpl.jar symlink in "main" swi-prolog package by using
    debian/swi-prolog-jpl.links instead of specifying it in debian/rules
    to ensure it ends up in the right package. (Closes: #549628)

 -- Chris Lamb <lamby@debian.org>  Thu, 29 Oct 2009 19:17:06 +0000

swi-prolog (5.6.64-3) unstable; urgency=low

  * Include CHR library in swi-prolog package. (Closes: #541183)
  * Bump Standards-Version to 3.8.3.

 -- Chris Lamb <lamby@debian.org>  Tue, 25 Aug 2009 03:55:20 +0100

swi-prolog (5.6.64-2) unstable; urgency=low

  * Add Build-Depends on libxft-dev, libxext-dev, libice-dev, libjpeg62-dev,
    libxinerama-dev, libxpm-dev and libxt-dev for anti-aliased fonts in XPCE.
    (Closes: #527233)
  * Bump Standards-Version to 3.8.1.

 -- Chris Lamb <lamby@debian.org>  Sat, 09 May 2009 13:43:43 +0100

swi-prolog (5.6.64-1) unstable; urgency=low

  * New upstream release.
  * Fix debian/watch file.
  * Drop 05_fix_java_lib_paths patch - applied upstream.
  * Refer to `/usr/share/common-licenses/GPL-2' in debian/copyright instead of
    just `GPL'.
  * Update Git repository URLs.

 -- Chris Lamb <lamby@debian.org>  Sun, 22 Feb 2009 02:17:41 +0000

swi-prolog (5.6.63-3) unstable; urgency=low

  * Add call to autoconf to ensure the changes in 05_fix_java_lib_paths.dpatch
    are actually applied to the JPL source. Thanks again to Peter Green
    <plugwash@p10link.net>. (Closes: #510409)

 -- Chris Lamb <lamby@debian.org>  Sat, 10 Jan 2009 01:26:48 +0000

swi-prolog (5.6.63-2) unstable; urgency=low

  * Fix FTBFS on architectures other than i386 and amd64 (Closes: #510409)