@@ -1,0 +1,1 @@
+swi-prolog-x: image-file-in-usr-lib
