@@ -1,0 +1,2 @@
+debian/swi-prolog-x/usr/lib/swi-prolog/xpce/man/xpce.1
+debian/swi-prolog-x/usr/lib/swi-prolog/xpce/man/xpce-client.1
