@@ -1,0 +1,2 @@
+?package(swi-prolog-x):needs="text" section="Applications/Programming"\
+  title="SWI-Prolog (with XPCE)" command="/usr/bin/xpce"
