@@ -1,1 +1,0 @@
-swi-prolog-xpce: image-file-in-usr-lib
