@@ -1,2 +1,0 @@
-debian/swi-prolog-xpce/usr/lib/swi-prolog/xpce/man/xpce.1
-debian/swi-prolog-xpce/usr/lib/swi-prolog/xpce/man/xpce-client.1
