@@ -1,2 +1,0 @@
-?package(swi-prolog-xpce):needs="text" section="Applications/Programming"\
-  title="SWI-Prolog (with XPCE)" command="/usr/bin/xpce"
