@@ -1,6 +1,8 @@
 swi-prolog (5.8.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Re-arrange binary packages at upstream's request:
+    - Rename -xpce to -x
 
  -- Chris Lamb <lamby@debian.org>  Tue, 05 Jan 2010 21:54:06 +0000
 
